kubernetes/apps/monitoring/helm-dashboard/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-dashboard
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: helm.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "helm.${SECRET_DOMAIN}"
      secretName: "helm-tls"
  rules:
    - host: "helm.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-dashboard
                port:
                  number: 8080
      # ingress:
      #   enabled: true
      #   ingressClassName: "traefik"
      #   annotations:
      #     cert-manager.io/cluster-issuer: "letsencrypt-production"
      #     external-dns.home.arpa/enabled: "true"
      #     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
      #     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
      #   hosts:
      #     - host: "goldilocks.${SECRET_DOMAIN_NAME}"
      #       paths:
      #         - path: /
      #           type: Prefix
